--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.6.5",
     "reset.css": "^2.0.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
