--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.6.5",
     "reset.css": "^2.0.2",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
     "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
@@ -23,7 +25,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "^3.2.3",
     "prettier": "2.2.1",
+    "push-dir": "^0.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
